style: force solve sticky sidebar bug by adding align-items flex-start to parent container

--- a/my-react-app/src/index.css
+++ b/my-react-app/src/index.css
@@ -234,7 +234,6 @@ main {
   padding-bottom: 40px;
   width: 100%;
   max-width: 100%;
-  overflow-x: hidden;
 }
 
 .sidebar-left {
